"Very detailed 3 pages Résumé"

--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -18,10 +18,12 @@
     {Jan. 2012 - July 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Thesis: Influence-based Motion Planning Algorithms for Games}
+        \item {\textbf{Thesis:} Influence-based Motion Planning Algorithms for Games}
         %\item {Areas of Study: Artificial Intelligence, Motion Planning, and Game Engines}
-        \item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-        %\item {\textbf{Availability to start working on April 1 of 2017, requiring a week off for the thesis defense (expectedly May/June)}.}
+        \item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+        \item {\textbf{Context:} PhD thesis consisting in the implementing a modular game engine in Java, suitable for teaching a video games and technologies course, and serve as a framework suitable to experiment with scene management for MMOGs. Latter, changed to path finding algorithms merged with influence maps.}
+        \item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Implementation of a modular game engine in Java (JOT). Implementation of techniques for state management in MMOGs. Integration of the proposed solution with a network simulator to test the solution(s) performance. Implementation of a novel pathfinding algorithm, and two novel techniques to integrate influence maps with pathfinders. Writing of articles, the thesis, and presentation, and oral presentation/defense of the former.}
+        \item {\textbf{Technologies:} Java 1.6-1.8, GridGain, JGroups, JogAmp, Maven, GIT, Apache Math Commons, NetBeans, C++, Omnet++, Eclipse, LibreOffice, LaTeX, Beamer, TexMaker, JabRef.}
       \end{cvitems}
     }
 
@@ -34,8 +36,11 @@
     {
       \begin{cvitems} % Description(s) bullet points
         %\item {Final Project at \href{http://www.ubi.pt/}{Instituto de Telecomunica\c{c}~oes}: Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
-        \item {Final Project: Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
-		\item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+        \item {\textbf{Final Project:} Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
+		\item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+		\item {\textbf{Context:} Bachelors final project consisting in extending with scene management techniques an existing Java video game, to explore grid computing frameworks and the possibility of converting multiplayer online video games into MMOGs.}
+		\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Evaluation of communication, storage, and computation grid solutions (e.g., GridGain). Implementation of existing techniques into an existing video game. Writing of the project final report and presentation, and oral presentation former.}
+		\item {\textbf{Technologies:} Java 1.6, GridGain, Apache Math Commons, JogAmp, NetBeans, LaTeX, Beamer, TexMaker, JabRef.}
       \end{cvitems}
     }
   
@@ -47,9 +52,12 @@
     {Sept. 2007 - Oct. 2009} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Final Thesis: Real-Time 3D Rendering of Water using CUDA (19/20 points)}
+        \item {\textbf{Final Thesis:} Real-Time 3D Rendering of Water using CUDA (19/20 points)}
         %\item {Area of Study: Natural Phenomena Real-Time Simulation}
-        \item {Supervisor: \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+        \item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+		\item {\textbf{Context:} Master's thesis consisting in the extension of a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA. }
+		\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of the thesis, scientific articles, and corresponding presentations. Oral presentation/defense of the thesis and of an article in a national conference.}
+        \item {\textbf{Technologies:} CUDA 2.0, C/C++, Visual Studio 2005-2008, LaTeX, Beamer, TexMaker, JabRef.}
       \end{cvitems}
     }
 
