--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -15,15 +15,36 @@
     {Software Engineer} % Job title
     {\href{https://www.reditpro.com/}{Red IT} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {July 2017 - Present} % Date(s)
+    {August 2017 - Present} % Date(s)
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
-%      \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-      \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-      \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}
+      \begin{cvitems} % Description(s) of tasks/responsibilities      
+%        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
+%%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
+		\item {\textbf{Context:} Development and bug support for an in use information management system in the areas of social action and health (cannot disclose from which due to confidentiality agreement terms), lets refer to it as X.}
+		\item {\textbf{Functions:} Extension and maintenance of Model-View-Controller (MVC) functionalities including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic nug resolution in views, controllers, and models of X.}		
+		\item {\textbf{Technologies:} Team Foundation Server, jQuery, Ajax, JSON, Bootstrap, C\#, MVC 5.0, MS SQL-server 2014, Visual Studio 2013.}
       \end{cvitems}
-    }  
+    } 
+    
+%---------------------------------------------------------
+  \cventry
+    {Software Engineer} % Job title
+    {} % Organization
+    {} % Location
+    {July 2017 - August 2017} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities      
+%        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
+%%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
+		\item {\textbf{Context:} Assistance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
+		\item {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment of how could Azure AD be integrated in the at the time login process of Y.}		
+		\item {\textbf{Technologies:} Git, Angular2/4, JSON, Bootstrap, Node.js, C\#, MVC 5.0, MS SQL-server 2016, Visual Studio 2017, Visual Studio Code, Azure AD.}
+      \end{cvitems}
+    }   
 
 %%---------------------------------------------------------
 %  \cventry
@@ -58,10 +79,13 @@
     {Mar. 2008 - Dec. 2011} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-		%\item {Implementation of a game engine to test state management processing, storage and communication techniques.}        
-		\item {Engineering and design of a novel modular game engine architecture to test state management techniques.}
-        \item {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
-        %\item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}
+%		%\item {Implementation of a game engine to test state management processing, storage and communication techniques.}        
+%		\item {Engineering and design of a novel modular game engine architecture to test state management techniques.}
+%        \item {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
+%        %\item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}		
+		\item {\textbf{Context:} Study and ultimately attempt to developed a game engine for MMOGs to work on the browser.}
+		\item {\textbf{Functions:} Developed a game engine prototype in Java to test state management algorithms. Assisted in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implemented fluid simulators in the GPU. Elaboration and public presentation of scientific articles.}
+		\item {\textbf{Technologies:} Java 1.6, GridGain, Jgroups, JogAmp, Maven, Apache Math Commons, C/C++, CUDA 2.0, LaTeX,  Beamer, TexMaker, JabRef.}
       \end{cvitems}
     }     
     
@@ -82,10 +106,13 @@
     {\linebreak Jan. 2012 - July 2016 \linebreak Jan. 2012 - July 2012} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-		\item {Developed laboratory course material, including practical sheets and tests (available upon request).}
-        %\item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
-        %\item {Participated in practical project joint assessment with course supervisor.}
-        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}			
+%		\item {Developed laboratory course material, including practical sheets and tests (available upon request).}
+%        %\item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
+%        %\item {Participated in practical project joint assessment with course supervisor.}
+%        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}		
+		\item {\textbf{Context:} Lecturer as lab. assistant in practical laboratory component of the video game technologies and computer graphics courses.}
+		\item {\textbf{Functions:} Developed laboratory course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour laboratory. Participated in practical project joint assessment with course supervisor.}
+		\item {\textbf{Technologies:} Java 1.6-1.8, JmonkeyEngine, NetBeans, Whiteboard, LibreOffce, LaTeX, Beamer, TexMaker, JabRef.}
       \end{cvitems}
     }       
     
@@ -142,9 +169,12 @@
     {July 2007 - Apr. 2008} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses.}
-        \item {Integration of dynamic content with a content management system (CMS), assessment and extension of CMSs.}
+%        \item {Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses.}
+%        \item {Integration of dynamic content with a content management system (CMS), assessment and extension of CMSs.}
 		%\item {Research, implementation, and testing of novel modern ways to divulge a math department.}
+		\item {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.}
+		\item {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.}
+  		\item {\textbf{Technologies:} Blackboard, Mathematica, Matlab, LaTeX, Beamer, TexMaker.}
       \end{cvitems}
     }  
      
