--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -32,7 +32,23 @@
     {} % 
     { 
       \begin{cvitems} % Description(s)
-        \item {C/C++, C\#, Java, shell scripting, SQL, jQuery, Ajax, AngularJS, Node.js, CUDA/OpenMP/OpenCL/MPI,OpenGL, HTML/CSS/JavaScript/XML/JSON, UML, LaTeX.}
+        \item {
+        \textbf{C/C++} (6 Yrs, Academic), 
+        \textbf{C\#} (1 Yr, Academic \& 4 Mths, Professional), 
+        \textbf{Java} (7 Yrs, Academic \& Personal Use), 
+        \textbf{shell scripting} (8 Yrs, Academic \& Personal Use), 
+        \textbf{MySQL} (1 Yr, Academic), 
+        \textbf{MS SQL} (1 Yr, Academic \& 4 Mths, Professional), 
+        \textbf{jQuery/Ajax/JSON/Bootstrap} (2 Mths, Professional), 
+        \textbf{Angular2/4} \& \textbf{Node.js} (1.2 Mths, Professional), 
+		\textbf{OpenGL} (8 Yrs, Academic),         
+        \textbf{CUDA/OpenMP/OpenCL/MPI} (3 Yrs, Academic), 
+        \textbf{HTML/CSS/JavaScript/XML} (3 Yrs, Academic \& 4 Mths, Professional), 
+        \textbf{UML} (2 Yrs, Academic),
+        \textbf{LaTeX} (9 Yrs, Academic),
+        %\textbf{Prolog} (2 Yrs, Academic),
+		%\textbf{OCaml} (1 Yr, Academic),
+		.}
 	  \end{cvitems}
     }  
   \vspace{-0.4cm}
@@ -45,7 +61,31 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) 
-        \item {Git/SVN, Maven, Ant, Team Foundation Server, Gimp, Skype, Google Chrome, Mozilla Firefox, LibreOffice, Blender, Eclipse/Netbeans/VisualStudio 2005-current, SQL server 2014-2016.}%, and Android Studio.           
+        \item {
+        \textbf{Git} (4 Yrs, Academic \& 4 Mths, Professional), 
+        \textbf{SVN} (2 Yrs, Academic \& 1 Mth, Professional), 
+        \textbf{Maven} (1 Yr, Academic \& Personal Use), 
+        \textbf{Ant} (7 Yrs, Academic \& Personal Use), 
+        \textbf{Team Foundation Server} (2 Mths, Professional), 
+        \textbf{LibreOffice} (7 Yrs, Personal Use), 
+        \textbf{Eclipse} (4 Yrs, Academic \& Personal Use), 
+        \textbf{Netbeans} (9 Yrs, Academic \& Personal Use), 
+        \textbf{JMonkeyEngine} (2 Yrs, Academic \& Personal Use), 
+        \textbf{VisualStudio 2005-current} (7 Yrs, Academic \& Personal Use \& 4 Mths, Professional), 
+        \textbf{Visual Studio Code} (4 Mths, Professional), 
+        \textbf{MS SQL-server 2014-2016} (1 Yr, Academic \& 4 Mths, Professional),
+        \textbf{Google Chrome} (7 Yrs, Personal Use \& 4 Mths, Professional) 
+        %\textbf{Mozilla Firefox} 
+        %\textbf{Gimp}
+        %\textbf{Skype} (5.4 Yrs, Personal Use)
+        %\textbf{WhatsApp} (4 Mths, Personal Use)
+        %\textbf{Slack} (1 Mth, Personal Use)
+        \textbf{UmbreloUML} (2 Yrs, Academic),
+        \textbf{Omnet++} (2 Yrs, Academic),
+        %\textbf{Blender}, 
+        %\textbf{Android Studio},
+        \textbf{Texmaker \& JabRef} (7 Yrs, Personal Use),    
+        .}       
       \end{cvitems}
     }  
   \vspace{-0.4cm}  
@@ -84,7 +124,13 @@
     {} 
     {
       \begin{cvitems} % Description(s)
-        \item {MS Windows (2003-2008 server, 7,10), Linux (Ubuntu, Mint Cinnamon, Fedora, and OpenSuse), Android and iOS.}        
+        \item {
+        \textbf{MS Windows 2003-2008 server, XP - 10} (21 Yrs Personal Use), 
+        \textbf{Linux (Ubuntu, Mint Cinnamon, Fedora, and OpenSuse)} (10 Yrs Academic \& Personal Use), 
+        \textbf{Android} (10 Yrs Personal Use), 
+        \textbf{iOS} (2 Yrs Personal Use),
+        \textbf{CiscoIOS} (3 Mths Training)
+        .} 
       \end{cvitems}
     }  
   \vspace{0.4cm} 
