--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -12,14 +12,49 @@
 
 %---------------------------------------------------------
   \cventry
-    {Developing Java-Based Apps on SAP Cloud Platform*} % Certificate designation
+    {Design Your First App with Build*} % Certificate designation
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {online} % Location
-    %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
-    {April. 2017 - May 2017} % Date(s)      
+    {Online} % Location
+    %{} % Location
+    %{Oct. 4, 2017 - Nov. 9, 2017} % Date(s)      
+    {Oct. 2017 - Nov. 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\href{https://open.sap.com/}{openSAP}} % License number     
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
+        \item {\href{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}{Online Certificate}} %Certificate URL 
+        \item {Valid from Nov. 9, 2017 - Present} % Validity
+      \end{cvitems}
+    }      
+	  
+%---------------------------------------------------------
+%  \cventry
+%    {Be Visual! Sketching Basics for IT Business} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
+%    {Sep. 2017 - Oct. 2017} % Date(s)          
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities
+%        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
+%        \item {\href{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}{Online Certificate}} %Certificate URL 
+%        \item {Valid from Oct. 12, 2017 - Present} % Validity
+%      \end{cvitems}
+%    }      
+	  
+%---------------------------------------------------------
+  \cventry
+    {Developing Java-Based Apps on SAP Cloud Platform*} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    {} % Certifacion entity
+    %{Online} % Location
+    {} % Location
+    %{April 5, 2017 - May 18, 2017} % Date(s)      
+    {April 2017 - May 2017} % Date(s)      
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
         \item {\href{https://open.sap.com/verify/xuhes-rimus-bikon-roper-hicom}{Online Certificate}} %Certificate URL 
         \item {Valid from May 18, 2017 - Present} % Validity
       \end{cvitems}
@@ -28,13 +63,15 @@
 %---------------------------------------------------------
   \cventry
     {SAP HANA Cloud Platform* Essentials} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
+    %{Online} % Location
     {} % Location
     %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
     {Feb. 2017 - March 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\href{https://open.sap.com/}{openSAP}} % License number     
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
         \item {\href{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}{Online Certificate}} %Certificate URL 
         \item {Valid from March 29, 2017 - Present} % Validity
       \end{cvitems}
@@ -43,15 +80,17 @@
 %---------------------------------------------------------  
   \cventry
     {Extending SAP S/4HANA with SAP HANA Cloud Platform*} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
+    %{Online} % Location
     {} % Location
     %{Jan. 11, 2017 - March 2, 2017} % Date(s)      
     {Jan. 2017 - March 2017} % Date(s)      
     {
 	    \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\href{https://open.sap.com/}{openSAP}} % License number     
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
         \item {\href{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}{Online Certificate}} %Certificate URL 
-        \item {Valid from February 28, 2017 - Present} % Validity
+        \item {Valid from Feb. 28, 2017 - Present} % Validity
       \end{cvitems}
     }
    
