"Minor résumé text revisions."

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -24,7 +24,7 @@
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} Development and bug support for an in use information management system in the areas of social action and health (cannot disclose from which due to confidentiality agreement terms), lets refer to it as X.}
 		\item {\textbf{Functions:} Extension and maintenance of Model-View-Controller (MVC) functionalities including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic nug resolution in views, controllers, and models of X.}		
-		\item {\textbf{Technologies:} Team Foundation Server, jQuery, Ajax, JSON, Bootstrap, C\#, MVC 5.0, MS SQL-server 2014, Visual Studio 2013.}
+		\item {\textbf{Technologies:} TFS, jQuery, Ajax, JSON, Bootstrap, C\#, MVC 5.0, MS SQL-server 2014, Visual Studio 2013.}
       \end{cvitems}
     } 
     
@@ -85,7 +85,7 @@
 %        %\item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}		
 		\item {\textbf{Context:} Study and ultimately attempt to developed a game engine for MMOGs to work on the browser.}
 		\item {\textbf{Functions:} Developed a game engine prototype in Java to test state management algorithms. Assisted in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implemented fluid simulators in the GPU. Elaboration and public presentation of scientific articles.}
-		\item {\textbf{Technologies:} Java 1.6, GridGain, Jgroups, JogAmp, Maven, Apache Math Commons, C/C++, CUDA 2.0, LaTeX,  Beamer, TexMaker, JabRef.}
+		\item {\textbf{Technologies:} Java 1.6, GridGain, Jgroups, JogAmp, Maven, Apache Math Commons, C/C++, CUDA 2.0, LaTeX,  Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
     }     
     
@@ -110,9 +110,9 @@
 %        %\item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
 %        %\item {Participated in practical project joint assessment with course supervisor.}
 %        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}		
-		\item {\textbf{Context:} Lecturer as lab. assistant in practical laboratory component of the video game technologies and computer graphics courses.}
-		\item {\textbf{Functions:} Developed laboratory course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour laboratory. Participated in practical project joint assessment with course supervisor.}
-		\item {\textbf{Technologies:} Java 1.6-1.8, JmonkeyEngine, NetBeans, Whiteboard, LibreOffce, LaTeX, Beamer, TexMaker, JabRef.}
+		\item {\textbf{Context:} Lab. assistant in practical component of the video game technologies and computer graphics courses.}
+		\item {\textbf{Functions:} Developed lab. course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour lab. Participated in practical project joint assessment with course supervisor.}
+		\item {\textbf{Technologies:} Java 1.6-1.8, JmonkeyEngine, NetBeans, Whiteboard, LibreOffce, LaTeX, Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
     }       
     
@@ -174,7 +174,7 @@
 		%\item {Research, implementation, and testing of novel modern ways to divulge a math department.}
 		\item {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.}
 		\item {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.}
-  		\item {\textbf{Technologies:} Blackboard, Mathematica, Matlab, LaTeX, Beamer, TexMaker.}
+  		\item {\textbf{Technologies:} Blackboard, Mathematica, Matlab, LaTeX, Beamer.} %, TexMaker.}
       \end{cvitems}
     }  
      
