--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -30,24 +30,24 @@
     {} % 
     {} % 
     {} % 
-    { 
+    {     
       \begin{cvitems} % Description(s)
         \item {
-        \textbf{C/C++} (6 Yrs, Academic), 
-        \textbf{C\#} (1 Yr, Academic \& 4 Mths, Professional), 
-        \textbf{Java} (7 Yrs, Academic \& Personal Use), 
-        \textbf{shell scripting} (8 Yrs, Academic \& Personal Use), 
-        \textbf{MySQL} (1 Yr, Academic), 
-        \textbf{MS SQL} (1 Yr, Academic \& 4 Mths, Professional), 
-        \textbf{jQuery/Ajax/JSON/Bootstrap} (2 Mths, Professional), 
-        \textbf{Angular2/4} \& \textbf{Node.js} (1.2 Mths, Professional), 
-		\textbf{OpenGL} (8 Yrs, Academic),         
-        \textbf{CUDA/OpenMP/OpenCL/MPI} (3 Yrs, Academic), 
-        \textbf{HTML/CSS/JavaScript/XML} (3 Yrs, Academic \& 4 Mths, Professional), 
-        \textbf{UML} (2 Yrs, Academic),
-        \textbf{LaTeX} (9 Yrs, Academic),
-        %\textbf{Prolog} (2 Yrs, Academic),
-		%\textbf{OCaml} (1 Yr, Academic),
+        \textbf{C/C++}\ref{4}{$^{[4]}$}, 
+        \textbf{C\#}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        \textbf{Java}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        \textbf{shell scripting}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        \textbf{MySQL}\ref{2}{$^{[2]}$}, 
+        \textbf{MS SQL}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        \textbf{jQuery/Ajax/JSON/Bootstrap}\ref{9}{$^{[9]}$},  
+        \textbf{Angular2/4} \& \textbf{Node.js}\ref{9}{$^{[9]}$},  
+		\textbf{OpenGL}\ref{4}{$^{[4]}$}       
+        \textbf{CUDA/OpenMP/OpenCL/MPI}\ref{3}{$^{[3]}$}
+        \textbf{HTML/CSS/JavaScript/XML}\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        \textbf{UML}\ref{2}{$^{[2]}$},
+        \textbf{LaTeX}\ref{4}{$^{[4]}$}%,
+        %\textbf{Prolog}\ref{2}{$^{[2]}$},
+		%\textbf{OCaml}\ref{2}{$^{[2]}$},
 		.}
 	  \end{cvitems}
     }  
@@ -62,29 +62,29 @@
     {
       \begin{cvitems} % Description(s) 
         \item {
-        \textbf{Git} (4 Yrs, Academic \& 4 Mths, Professional), 
-        \textbf{SVN} (2 Yrs, Academic \& 1 Mth, Professional), 
-        \textbf{Maven} (1 Yr, Academic \& Personal Use), 
-        \textbf{Ant} (7 Yrs, Academic \& Personal Use), 
-        \textbf{Team Foundation Server} (2 Mths, Professional), 
-        \textbf{LibreOffice} (7 Yrs, Personal Use), 
-        \textbf{Eclipse} (4 Yrs, Academic \& Personal Use), 
-        \textbf{Netbeans} (9 Yrs, Academic \& Personal Use), 
-        \textbf{JMonkeyEngine} (2 Yrs, Academic \& Personal Use), 
-        \textbf{VisualStudio 2005-current} (7 Yrs, Academic \& Personal Use \& 4 Mths, Professional), 
-        \textbf{Visual Studio Code} (4 Mths, Professional), 
-        \textbf{MS SQL-server 2014-2016} (1 Yr, Academic \& 4 Mths, Professional),
-        \textbf{Google Chrome} (7 Yrs, Personal Use \& 4 Mths, Professional) 
+        \textbf{Git}\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        \textbf{SVN}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        \textbf{Maven}\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
+        \textbf{Ant}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        \textbf{Team Foundation Server}\ref{9}{$^{[9]}$}, 
+        %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
+        \textbf{Eclipse}\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$}, 
+        \textbf{Netbeans}\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        %\textbf{JMonkeyEngine}\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
+        \textbf{VisualStudio 2005-current}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
+        \textbf{Visual Studio Code}\ref{9}{$^{[9]}$}, 
+        \textbf{MS SQL-server 2014-2016}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        \textbf{Google Chrome}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
-        %\textbf{Skype} (5.4 Yrs, Personal Use)
-        %\textbf{WhatsApp} (4 Mths, Personal Use)
-        %\textbf{Slack} (1 Mth, Personal Use)
-        \textbf{UmbreloUML} (2 Yrs, Academic),
-        \textbf{Omnet++} (2 Yrs, Academic),
+        %\textbf{Skype}\ref{8}{$^{[8]}$}
+        %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
+        %\textbf{Slack}\ref{5}{$^{[5]}$}
+        %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
+        %\textbf{Omnet++}\ref{2}{$^{[2]}$},
         %\textbf{Blender}, 
         %\textbf{Android Studio},
-        \textbf{Texmaker \& JabRef} (7 Yrs, Personal Use),    
+        %\textbf{Texmaker \& JabRef}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
         .}       
       \end{cvitems}
     }  
@@ -125,16 +125,44 @@
     {
       \begin{cvitems} % Description(s)
         \item {
-        \textbf{MS Windows 2003-2008 server, XP - 10} (21 Yrs Personal Use), 
-        \textbf{Linux (Ubuntu, Mint Cinnamon, Fedora, and OpenSuse)} (10 Yrs Academic \& Personal Use), 
-        \textbf{Android} (10 Yrs Personal Use), 
-        \textbf{iOS} (2 Yrs Personal Use),
-        \textbf{CiscoIOS} (3 Mths Training)
+        \textbf{MS Windows 2003-2008 server, XP - 10}\ref{8}{$^{[8]}$}, 
+        \textbf{Linux (Ubuntu, Mint, Fedora, and OpenSuse)}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        \textbf{Android}\ref{8}{$^{[8]}$}, 
+        %\textbf{iOS}\ref{6}{$^{[6]}$},
+        \textbf{CiscoIOS}\ref{13}{$^{[13]}$}%,
         .} 
       \end{cvitems}
     }  
-  \vspace{0.4cm} 
+  \vspace{-0.4cm} 
     
+
+%---------------------------------------------------------
+% 			>1				1-2 				  		3-5 				5+
+%AC  \ref{1}{$^{[1]}$}   \ref{2}{$^{[2]}$}   \ref{3}{$^{[3]}$}   \ref{4}{$^{[4]}$}
+%PER \ref{5}{$^{[5]}$} 	  \ref{6}{$^{[6]}$}   \ref{7}{$^{[7]}$}   \ref{8}{$^{[8]}$}
+%PRO \ref{9}{$^{[9]}$} 	  \ref{10}{$^{[10]}$} \ref{11}{$^{[11]}$} \ref{12}{$^{[12]}$}
+%TRA \ref{13}{$^{[13]}$} \ref{14}{$^{[14]}$} \ref{15}{$^{[15]}$} \ref{4}{$^{[16]}$}            
+
+%---------------------------------------------------------
+  \cventry
+    {} % title
+    {} 
+    {} 
+    {} 
+    {
+      \begin{cvitems} % Description(s)
+        \item[]{\textbf{Academic}: \label{1}{$^{[1]}$>1 Yr}, \label{2}{$^{[2]}$1 - 2 Yrs}, \label{3}{$^{[3]}$3 - 5 Yrs}, \label{4}{$^{[4]}$ 5+ Yrs}%}
+		%\item[]{
+		\hspace{1.4cm}
+		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
+		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}%}
+		%\item[]{
+		\hspace{0.5cm}
+		\textbf{Training}: \label{13}{$^{[13]}$>1 Yr}, \label{14}{$^{[14]}$1 - 2 Yrs}, \label{15}{$^{[15]}$3 - 5 Yrs}, \label{16}{$^{[16]}$ 5+ Yrs}}
+      \end{cvitems}
+    }  
+  \vspace{0.4cm} 
+      
 %---------------------------------------------------------
 
 \end{cventries}
