--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,10 +10,13 @@
 \begin{cvsummary}
 
 %---------------------------------------------------------
-Software Engineer, Project Researcher, Laboratory Professor, and Scientific Presenter with over 9 years of experience.
+Software Developer with 6 months of experience.
+Former Project Researcher, Laboratory Professor, and Scientific Presenter with over 9 years of experience.
 Highly motivated, communicative, self-sufficient, and versatile professional with solid academic background in Computer Science and Engineering, namely in: 
 %Proved ability to address problems with a tendentiously unbiased and professional view, namely regarding: 
-Game Engine Technologies, Teaching methodologies, HPC, and HCI.
-Known as a team player, multi-tasker, constant self-driven learner; strive to address novel and exciting challenges by integrating, adapting, developing novel knowledge/tools.
+Game Engine Technologies, Teaching methodologies, HPC, Geometric Computing, and HCI.
+Known as a team player %, multi-tasker, 
+and constant self-driven learner; 
+striving to address novel and exciting challenges. %by integrating, adapting, developing novel knowledge/tools.
 Preference to work with and/or manage teams in order to grow personally and professionally.
 \end{cvsummary}
