--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -54,10 +54,12 @@
 \photo[circle,noedge,left]{profile.png}
 \name{Gon\c{c}alo N.}{Paiva Amador\vspace{0.1cm}}
 %\position{Software Engineer {\enskip\cdotp\enskip} Lecturer {\enskip\cdotp\enskip} Project Manager}
-\personalinformation{\faHome \acvHeaderIconSep Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
+\personalinformation{\faHome \acvHeaderIconSep Lisbon, Portugual%Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
 {\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Portuguese {\enskip\cdotp\enskip} \faBirthdayCake \acvHeaderIconSep 27/07/1983
 {\enskip\cdotp\enskip} \faMars \acvHeaderIconSep Male
-{\enskip\cdotp\enskip} \faFemale \faMale \acvHeaderIconSep Single\vspace{0.1cm}}
+{\enskip\cdotp\enskip} %\faFemale 
+\faMale 
+\acvHeaderIconSep Single\vspace{0.1cm}}
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
 \mobile{(+351) 96-281-68-58} 
