--- a/examples/resume/additional_information.tex
+++ b/examples/resume/additional_information.tex
@@ -25,6 +25,7 @@
         \item[] {\hspace{-.4cm} \textbf{B1/B Drivers license}}
       \end{cvitems}
     }
+  \vspace{0.6cm} 
 
 %---------------------------------------------------------
 \end{cventries}
