--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -4,6 +4,11 @@
 %\cvsectionspecifiedcolor{rainbowcolor-green}{\faBriefcase \acvHeaderIconSep Experience}
 \cvsectionspecifiedcolor{rainbowcolor-red}{\faBriefcase \acvHeaderIconSep Experience}
 
+%Adaptive – modifying the system to cope with changes in the software environment (DBMS, OS) [4]
+%Perfective – implementing new or changed user requirements which concern functional enhancements to the software
+%Corrective – diagnosing and fixing errors, possibly ones found by users [4]
+%Preventive – increasing software maintainability or reliability to prevent problems in the future [4]
+
 
 %-------------------------------------------------------------------------------
 %	CONTENT
@@ -22,8 +27,10 @@
 %%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
-		\item {\textbf{Context:} Development and bug support for an in use information management system in the areas of social action and health (cannot disclose from which due to confidentiality agreement terms), lets refer to it as X.}
-		\item {\textbf{Functions:} Extension and maintenance of Model-View-Controller (MVC) functionalities including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic nug resolution in views, controllers, and models of X.}		
+		\item {\textbf{Context:} 
+Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health %(cannot disclose from which due to confidentiality agreement terms)
+, lets refer to it as X.}
+		\item {\textbf{Functions:} Extension and maintenance of all Model-View-Controller (MVC) functionalities, including models, views, controllers, and SQL scripts to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.}		
 		\item {\textbf{Technologies:} TFS, jQuery, Ajax, JSON, Bootstrap, C\#, MVC 5.0, MS SQL-server 2014, Visual Studio 2013.}
       \end{cvitems}
     } 
@@ -40,7 +47,7 @@
 %%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
-		\item {\textbf{Context:} Assistance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
+		\item {\textbf{Context:} Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
 		\item {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment of how could Azure AD be integrated in the at the time login process of Y.}		
 		\item {\textbf{Technologies:} Git, Angular2/4, JSON, Bootstrap, Node.js, C\#, MVC 5.0, MS SQL-server 2016, Visual Studio 2017, Visual Studio Code, Azure AD.}
       \end{cvitems}
