--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -33,19 +33,19 @@
     {     
       \begin{cvitems} % Description(s)
         \item {
-        \textbf{C/C++}\ref{4}{$^{[4]}$}, 
-        \textbf{C\#}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        \textbf{Java}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        \textbf{shell scripting}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        \textbf{MySQL}\ref{2}{$^{[2]}$}, 
-        \textbf{MS SQL}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        \textbf{jQuery/Ajax/JSON/Bootstrap}\ref{9}{$^{[9]}$},  
-        \textbf{Angular2/4} \& \textbf{Node.js}\ref{9}{$^{[9]}$},  
-		\textbf{OpenGL}\ref{4}{$^{[4]}$}       
-        \textbf{CUDA/OpenMP/OpenCL/MPI}\ref{3}{$^{[3]}$}
-        \textbf{HTML/CSS/JavaScript/XML}\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
-        \textbf{UML}\ref{2}{$^{[2]}$},
-        \textbf{LaTeX}\ref{4}{$^{[4]}$}%,
+        C/C++\ref{4}{$^{[4]}$}, 
+        C\#\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        Java\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        shell scripting\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        MySQL\ref{2}{$^{[2]}$}, 
+        MS-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},  
+        Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
+		OpenGL\ref{4}{$^{[4]}$}       
+        CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}
+        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        UML\ref{2}{$^{[2]}$},
+        LaTeX\ref{4}{$^{[4]}$}%,
         %\textbf{Prolog}\ref{2}{$^{[2]}$},
 		%\textbf{OCaml}\ref{2}{$^{[2]}$},
 		.}
@@ -62,19 +62,19 @@
     {
       \begin{cvitems} % Description(s) 
         \item {
-        \textbf{Git}\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
-        \textbf{SVN}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        \textbf{Maven}\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        \textbf{Ant}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        \textbf{Team Foundation Server}\ref{9}{$^{[9]}$}, 
+        Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
+        Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
+        Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        Team Foundation Server\ref{9}{$^{[9]}$}, 
         %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
-        \textbf{Eclipse}\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$}, 
-        \textbf{Netbeans}\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        %\textbf{JMonkeyEngine}\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        \textbf{VisualStudio 2005-current}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
-        \textbf{Visual Studio Code}\ref{9}{$^{[9]}$}, 
-        \textbf{MS SQL-server 2014-2016}\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        \textbf{Google Chrome}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
+        Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$}, 
+        Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
+        Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
+        Visual Studio Code\ref{9}{$^{[9]}$}, 
+        MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{Skype}\ref{8}{$^{[8]}$}
@@ -125,11 +125,11 @@
     {
       \begin{cvitems} % Description(s)
         \item {
-        \textbf{MS Windows 2003-2008 server, XP - 10}\ref{8}{$^{[8]}$}, 
-        \textbf{Linux (Ubuntu, Mint, Fedora, and OpenSuse)}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        \textbf{Android}\ref{8}{$^{[8]}$}, 
+        MS Windows 2003-2008 server, XP - 10\ref{8}{$^{[8]}$}, 
+        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        Android\ref{8}{$^{[8]}$}, 
         %\textbf{iOS}\ref{6}{$^{[6]}$},
-        \textbf{CiscoIOS}\ref{13}{$^{[13]}$}%,
+        CiscoIOS\ref{13}{$^{[13]}$}%,
         .} 
       \end{cvitems}
     }  
@@ -153,7 +153,7 @@
       \begin{cvitems} % Description(s)
         \item[]{\textbf{Academic}: \label{1}{$^{[1]}$>1 Yr}, \label{2}{$^{[2]}$1 - 2 Yrs}, \label{3}{$^{[3]}$3 - 5 Yrs}, \label{4}{$^{[4]}$ 5+ Yrs}%}
 		%\item[]{
-		\hspace{1.4cm}
+		\hspace{1.48cm}
 		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
 		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}%}
 		%\item[]{
